--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+hmac = "0.12"
+sha2 = "0.10"
+lru = "0.16.2"
+bincode = { version = "2.0.1", features = ["serde"]}
+serde = { version = "1.0", features = ["derive"] }
